# Server/swaggerUI/swagger_server/controllers/default_controller.py
@@ -2,13 +2,14 @@ import connexion
 import six
 
 from swagger_server.models.parking_spot import ParkingSpot  # noqa: E501
+from swagger_server.models.user import User  # noqa: E501
 from swagger_server import util
 
 
 def login_get(uid):  # noqa: E501
     """Login into server
 
-    check user crediential # noqa: E501
+     # noqa: E501
 
     :param uid: the user id
     :type uid: int
@@ -19,7 +20,7 @@ def login_get(uid):  # noqa: E501
 
 
 def parking_spots_get(range=None):  # noqa: E501
-    """parking_spots_get
+    """get the list of the parking spots
 
      # noqa: E501
 
@@ -32,7 +33,7 @@ def parking_spots_get(range=None):  # noqa: E501
 
 
 def parking_spots_id_get(id):  # noqa: E501
-    """parking_spots_id_get
+    """check the status of the parking spot
 
      # noqa: E501
 
@@ -44,8 +45,8 @@ def parking_spots_id_get(id):  # noqa: E501
     return 'do some magic!'
 
 
-def parking_spots_id_post(id, op, uid):  # noqa: E501
-    """parking_spots_id_post
+def parking_spots_id_post(id, op, uid, time=None):  # noqa: E501
+    """park or leave the parking spot
 
     the user id # noqa: E501
 
@@ -53,9 +54,24 @@ def parking_spots_id_post(id, op, uid):  # noqa: E501
     :type id: int
     :param op: the operation the user want to act [\&quot;check_in\&quot;, \&quot;check_out\&quot;]
     :type op: str
-    :param uid: 
+    :param uid: user id unique for each
     :type uid: int
+    :param time: the num of hour allow user to park [1-24]
+    :type time: int
 
     :rtype: None
+    """
+    return 'do some magic!'
+
+
+def user_uid_get(uid):  # noqa: E501
+    """check the status of the user
+
+     # noqa: E501
+
+    :param uid: user id
+    :type uid: int
+
+    :rtype: List[User]
     """
     return 'do some magic!'
